# RAG_Bootcamp_Udemy

./: README.md  pyproject.toml  requirements.txt
Exploratory_Notebooks/10_Agentic_RAG/: Agentic_RAG.ipynb  Agentic_RAG_project.ipynb
Exploratory_Notebooks/11_Autonomous_RAG/: Answer_Synthesis.ipynb  COT_RAG.ipynb  Iterative_Retrievel.ipynb  Query_Planning_Decomposition.ipynb  SelfReflection.ipynb  internal_docs.txt
Exploratory_Notebooks/12_MultiAgent_RAG/: Hierarchical_Agent.ipynb  MultiAgentNetwork_RAG.ipynb  Supervisor_MultiAgent.ipynb
Exploratory_Notebooks/13_Corrective_RAG/: Corrective_RAG.ipynb
Exploratory_Notebooks/14_Adaptive_RAG/: Adaptive_RAG.ipynb
Exploratory_Notebooks/15_RAG_with_Memory/: RAG_memory.ipynb
Exploratory_Notebooks/17_GraphDB/: Langchain_graphdb.ipynb  neo4j_graphdb.txt
Exploratory_Notebooks/1_DataIngestParsing/: DataIngestion_and_Parsing.ipynb
Exploratory_Notebooks/2_VectorEmbeddings/: VectorEmbeddings.ipynb
Exploratory_Notebooks/3_VectorStore/: VectorDB.ipynb  VectoreStores.ipynb
Exploratory_Notebooks/4_AdvancedChunking/: AdvancedChunking.ipynb
Exploratory_Notebooks/5_HybridSearch/: HybridSearchStrategies.ipynb
Exploratory_Notebooks/6_QueryEnhancements/: QueryEnhancements.ipynb
Exploratory_Notebooks/7_MultiModalRAG/: MultiModalRag.ipynb
Exploratory_Notebooks/8_LangGraphBasics/: LangGraphBasics.ipynb
Exploratory_Notebooks/9_Agent_Architecture/: AgentArchitecture.ipynb
langgraph_deployment/: langgraph.json  openai_agent.py
langgraph_deployment/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  (+2 more)
(+7 files in other folders)
